feat : added infinite loading in buyer home
